--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@themaximalist/llm.js": "^0.8.0",
+    "@themaximalist/llm.js": "github:Heliumchen/llm.js#main",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
