--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cross-fetch": "^4.1.0",
+    "date-fns": "^4.1.0",
     "eventemitter3": "^5.0.1",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
