--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
@@ -27,7 +27,7 @@
     "date-fns": "^4.1.0",
     "eventemitter3": "^5.0.1",
     "lucide-react": "^0.479.0",
-    "next": "15.2.2",
+    "next": "^15.3.0",
     "next-themes": "^0.4.6",
     "openai": "^4.88.0",
     "react": "^19.0.0",
